# passfort-backend-interview-project-skeleton

./: README.md
javascript/: README.md  app.js  package-lock.json  package.json  server.js  server.test.js
python/: README.md  app.py  pyproject.toml  routes.py
python/tests/: test_app.py
